#  Photini - a simple photo metadata editor.
#  http://github.com/jim-easterbrook/Photini
#  Copyright (C) 2023-24  Jim Easterbrook  jim@jim-easterbrook.me.uk
#
#  This program is free software: you can redistribute it and/or
#  modify it under the terms of the GNU General Public License as
#  published by the Free Software Foundation, either version 3 of the
#  License, or (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see
#  <http://www.gnu.org/licenses/>.

[build-system]
requires = ["setuptools >= 59.6", "setuptools_scm[toml]>=6.2", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "Photini"
description = "Simple photo metadata editor"
readme = "README.rst"
license = {text = "GPLv3+"}
authors = [{name = "Jim Easterbrook", email = "jim@jim-easterbrook.me.uk"}]
keywords = ["Exif", "IPTC", "XMP"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
  "cachetools >= 3.0",
  "chardet >= 3.0",
  "exiv2 >= 0.16",
  "filetype >= 1.0",
  "Pillow >= 5.3",
  "platformdirs >= 2.4",
  "requests >= 2.4",
  "pywin32 >= 302; platform_system == 'Windows'",
]
dynamic = ["version"]
requires-python = ">= 3.6"

[project.optional-dependencies]
flickr = ["photini[keyring,requests-oauthlib,requests-toolbelt]"]
google = ["photini[keyring,requests-oauthlib]"]
importer = ["gphoto2 >= 2.4; platform_system != 'Windows'"]
ipernity = ["photini[keyring,requests-toolbelt]"]
pixelfed = ["photini[keyring,requests-oauthlib,requests-toolbelt]"]
spelling = ["pyenchant >= 2.0"]
# install everything except the Qt package
all = ["""photini[keyring,requests-oauthlib,requests-toolbelt,\
importer,spelling,gpxpy]"""]
# set versions of common packages
keyring = ["keyring >= 7.0"]
requests-oauthlib = ["requests-oauthlib >= 1.0"]
requests-toolbelt = ["requests-toolbelt >= 0.9"]
# the following are intended for use by the photini-configure script
PyQt5 = ["PyQt5 >= 5.9", "PyQtWebEngine >= 5.12"]
PyQt6 = [
  "photini[PyQt6-linux]; platform_system == 'Linux'",
  "photini[PyQt6-windows]; platform_system == 'Windows'",
  "photini[PyQt6-darwin]; platform_system == 'Darwin'",
]
PyQt6-linux = [
  "PyQt6 >= 6.2;                  python_version != '3.6.*'",
  "PyQt6-WebEngine >= 6.2;        python_version != '3.6.*'",
  "PyQt6 >= 6.2, < 6.3;           python_version == '3.6.*'",
  "PyQt6-Qt6 < 6.3;               python_version == '3.6.*'",
  "PyQt6-WebEngine >= 6.2, < 6.3; python_version == '3.6.*'",
  "PyQt6-WebEngine-Qt6 < 6.3;     python_version == '3.6.*'",
]
PyQt6-windows = [
  "PyQt6 >= 6.2; platform_release not in '7'",
  "PyQt6-WebEngine >= 6.2; platform_release not in '7'",
]
PyQt6-darwin = [
  "PyQt6-Qt6 >= 6.2, != 6.6.1",
  "PyQt6-WebEngine-Qt6 >= 6.2, != 6.6.1",
]
PySide2 = [
  "PySide2 >= 5.11.1; python_version < '3.8'",
  "PySide2 >= 5.14; python_version >= '3.8'",
]
PySide6 = [
  "photini[PySide6-linux]; platform_system == 'Linux'",
  "photini[PySide6-windows]; platform_system == 'Windows'",
  "photini[PySide6-darwin]; platform_system == 'Darwin'",
]
PySide6-linux = ["PySide6 >= 6.2"]
PySide6-windows = ["PySide6 >= 6.2; platform_release not in '7'"]
PySide6-darwin = ["PySide6 >= 6.2, != 6.6.1"]
gpxpy = ["gpxpy >= 1.3.5, != 1.6.0"]
Pillow = []

[project.urls]
Homepage = "https://github.com/jim-easterbrook/Photini"
Documentation = "https://photini.readthedocs.io/"
Repository = "https://github.com/jim-easterbrook/Photini"
Changelog = "https://github.com/jim-easterbrook/Photini/blob/main/CHANGELOG.txt"

[project.scripts]
photini-configure = "photini.scripts:configure"
photini-post-install = "photini.scripts:post_install"

[project.gui-scripts]
photini = "photini.editor:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["doc*", "lang*"]

[tool.setuptools_scm]
write_to = "src/photini/_version.py"
version_scheme = "post-release"
